# duchess

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  justfile
book/: book.toml
duchess-build-rs/: Cargo.toml
duchess-build-rs/src/: code_writer.rs  derive_java.rs  files.rs  impl_java_trait.rs  java_compiler.rs  java_package_macro.rs  lib.rs  log.rs  main.rs  re.rs  shim_writer.rs
duchess-build-rs/test-files/: java_package_1.rs
duchess-reflect/: Cargo.toml
duchess-reflect/src/: argument.rs  check.rs  class_info.rs  codegen.rs  config.rs  lib.rs  parse.rs  reflect.rs  signature.rs  upcasts.rs
duchess-reflect/src/class_info/: from_syn.rs  javap.rs  javap_parser.lalrpop
duchess-reflect/src/reflect/: javap.rs
macro/: Cargo.toml  README.md  build.rs
macro/src/: argument.rs  check.rs  class_info.rs  codegen.rs  derive.rs  java_function.rs  lib.rs  parse.rs  reflect.rs  signature.rs  span_error.rs  substitution.rs  upcasts.rs
macro/src/class_info/: javap.rs  javap_parser.lalrpop
test-crates/duchess-java-tests/: Cargo.toml  build.rs
test-crates/duchess-java-tests/java/auth/: Authenticated.java  AuthenticationExceptionInvalidSecurityToken.java  AuthenticationExceptionInvalidSignature.java  AuthorizationException.java
test-crates/duchess-java-tests/java/derives/: OptionalFields.java
test-crates/duchess-java-tests/java/exceptions/: DifferentException.java  GenericExceptionThrower.java  ThrowExceptions.java
test-crates/duchess-java-tests/java/flags/: Flags.java
test-crates/duchess-java-tests/java/generics/: EventKey.java  MapKey.java  MapLike.java
test-crates/duchess-java-tests/java/keyword/impl/: WithKeywordImpl.java
test-crates/duchess-java-tests/java/log/: BaseEvent.java  BuildStep.java  NameStep.java
test-crates/duchess-java-tests/java/native_greeting/: Native.java
test-crates/duchess-java-tests/java/take_null/: TakeNull.java  TakeNullRecord.java
test-crates/duchess-java-tests/java/type_mismatch/: TakesInt.java
test-crates/duchess-java-tests/src/: java_wrapper  java_wrapper.rs  main.rs
test-crates/duchess-java-tests/tests/: ui.rs
test-crates/duchess-java-tests/tests/java-to-rust/java/java_passing_null/: JavaPassingNull.java
test-crates/duchess-java-tests/tests/java-to-rust/java/java_rust_initiated_exceptions/: JavaRustExceptions.java
test-crates/duchess-java-tests/tests/java-to-rust/java/java_rust_java_exception/: JavaRustJavaException.java  JavaRustJavaNPE.java
test-crates/duchess-java-tests/tests/java-to-rust/java/java_rust_scalars/: JavaRustScalars.java
test-crates/duchess-java-tests/tests/java-to-rust/java/java_to_rust_arrays/: JavaArrayTests.java
test-crates/duchess-java-tests/tests/java-to-rust/java/java_to_rust_greeting/: Java_Can_Call_Rust_Java_Function.java
test-crates/duchess-java-tests/tests/java-to-rust/rust-libraries/: java_rust_initiated_exceptions.rs  java_rust_java_exception.rs  java_rust_java_npe.rs  native_fn_arrays.rs  native_fn_callable_from_java.rs  native_fn_echos_int.rs  native_fn_passing_null.rs
test-crates/duchess-java-tests/tests/java_ui/java_to_rust_greeting/: JavaCanCallRustJavaFunction.java
test-crates/duchess-java-tests/tests/rust-to-java/: create_string_from_bytes.stderr  derive_lifetimes.rs  derive_options.rs  derive_scalar_fields.rs  duplicate_extends.rs  duplicate_extends.stderr  duplicate_implements.rs  duplicate_implements.stderr  exceptions.rs  instance_method_fully_qualified.rs  interface_class_mismatch_reflected.stderr  interface_class_mismatch_specified.rs  interface_class_mismatch_specified.stderr  keyword_impl.rs  must_use_jvmop.rs  must_use_jvmop.stderr  native_fn_link_suite.rs  native_fn_return_fresh_java_string.rs  native_fn_return_fresh_java_string.stderr  native_fn_return_java_string.rs  native_fn_return_local_java_string.rs  native_fn_return_local_java_string.stderr  native_fn_return_rust_string.rs  passing_null_values.rs  static_method_invocation.rs  throws_generic_exceptions.rs  to_java_java_refs.rs  to_java_on_rust_string.rs  to_java_produce_local_java_ref.rs  type_mismatch_bad_argument_type.rs  type_mismatch_bad_argument_type_explicit.rs  type_mismatch_bad_argument_type_explicit.stderr  type_mismatch_return_type_in_Object_hashCode.rs  upcast_no_double_free.rs
test-crates/duchess-java-tests/tests/rust-to-java/examples/: generics.rs  generics.stderr  greeting.rs  log.rs  log_global_ref_and_chained_calls.rs  log_global_ref_and_two_calls.rs
test-crates/duchess-java-tests/tests/ui/: create_string_from_bytes.rs  derive_lifetimes.rs  derive_scalar_fields.rs  duplicate_extends.stderr  duplicate_implements.stderr  exceptions.rs  exceptions.stderr  instance_method_from_superclass.rs  instance_method_fully_qualified.rs  interface_class_mismatch_reflected.rs  interface_class_mismatch_reflected.stderr  interface_class_mismatch_specified.stderr  mismatched_flags_private_method_declared_as_public.stderr  mismatched_flags_public_method_declared_as_private.rs  mismatched_flags_public_method_declared_as_private.stderr  native_fn_callable_from_java.rs  native_fn_link_suite.rs  native_fn_return_fresh_java_string.rs  native_fn_return_fresh_java_string.stderr  native_fn_return_java_string.rs  native_fn_return_local_java_string.rs  native_fn_return_local_java_string.stderr  native_fn_return_rust_string.rs  passing_null_values.rs  static_method_invocation.rs  to_java_java_refs.rs  to_java_on_java_string.rs  to_java_on_rust_string.rs  to_java_produce_local_java_ref.rs  type_mismatch.rs  type_mismatch.stderr  type_mismatch_bad_argument_type.rs  type_mismatch_bad_argument_type.stderr  type_mismatch_bad_argument_type_explicit.rs  type_mismatch_bad_argument_type_explicit.stderr  type_mismatch_bad_argument_type_in_decl.rs  type_mismatch_bad_argument_type_in_decl.stderr  type_mismatch_return_type_in_Object_hashCode.stderr  use_existing_works.rs
test-crates/duchess-java-tests/tests/ui/examples/: auth.rs  generics.rs  greeting.rs  log.rs  log_global_ref_and_chained_calls.rs  log_global_ref_and_two_calls.rs  log_local_ref_and_two_calls.rs  log_one_big_call.rs  memory_usage.rs
(+150 files in other folders)
