[workspace]

[workspace.package]
version = "0.1.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nikomatsakis/duchess"

[package]
name = "duchess"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Experiments with Java-Rust interop"

[dependencies]
derive_more = "0.99.17"
duchess-macro = { path = "macro" }
jni = { version = "0.21.1", features = ["invocation"] }
once_cell = "1.17.1"
thiserror = "1.0.40"