[workspace]

[workspace.package]
version = "0.1.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nikomatsakis/duchess"

[package]
name = "duchess"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Experiments with Java-Rust interop"

[dependencies]
derive_more = "0.99.17"
duchess-macro = { path = "macro" }
jni-sys = "0.3.0"
cesu8 = "1.1.0"
once_cell = "1.17.1"
thiserror = "1.0.40"
tracing = "0.1.37"
java-locator = { version = "0.1.3", optional = true }
libloading = { version = "0.8.0", optional = true }

[dev-dependencies]
expect-test = "1.4.1"

[features]
default = ["dylibjvm"]
dylibjvm = [
    "java-locator",
    "libloading",
]
