[package]
name = "duchess-reflect"
edition = "2021"
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Internal component of duchess crate"

[dependencies]
anyhow = "1.0.70"
lalrpop-util = { version = "0.19.9", features = ["lexer"] }
lazy_static = "1.4.0"
proc-macro2 = "1.0.56"
quote = "1.0.26"
rust-format = { version = "0.3.4", features = ["token_stream"] }
str_inflector = "0.12.0"
syn = "2.0.15"
tempfile = "3.8.1"

[build-dependencies]
lalrpop = "0.19.9"
