[package]
name = "duchess-macro"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.70"
lalrpop-util = { version = "0.19.9", features = ["lexer"] }
litrs = "0.4.0"
proc-macro2 = "1.0.56"
quote = "1.0.26"
regex = "1"
str_inflector = "0.12.0"

[dev-dependencies]
expect-test = "1.4.1"

[build-dependencies]
lalrpop = "0.19.9"
