[package]
name = "duchess-java-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
duchess = { path = "../.." }
thiserror = "1.0.40"

[dev-dependencies]
ui_test = "0.23"

[build-dependencies]
walkdir = "2.3"

[[bin]]
name = "java_wrapper"
path = "src/java_wrapper.rs"

[[test]]
name = "ui"
harness = false

[features]
jni_exactly_1_6 = ["duchess/jni_exactly_1_6"]
jni_exactly_1_8 = ["duchess/jni_exactly_1_8"]
